src/main/java/com/test/webtest/global/error/exception/BusinessException.java
package com.test.webtest.global.error.exception;

public class BusinessException {
}
